--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,20 @@
-
+{
+  "name": "Turnero De Ultima Milla",
+  "short_name": "Turnero",
+  "start_url": "/index.html",
+  "display": "standalone",
+  "background_color": "#3933EB",
+  "theme_color": "#3933EB",
+  "icons": [
+    {
+      "src": "/img/logo.jpeg",
+      "sizes": "192x192",
+      "type": "image/jpeg"
+    },
+    {
+      "src": "/img/logo.jpeg",
+      "sizes": "512x512",
+      "type": "image/jpeg"
+    }
+  ]
+}
