--- a/manifest.json
+++ b/manifest.json
@@ -2,19 +2,26 @@
   "name": "Turnero De Ultima Milla",
   "short_name": "Turnero",
   "start_url": "/index.html",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#3933EB",
   "theme_color": "#3933EB",
   "icons": [
     {
-      "src": "/img/logo.jpeg",
+      "src": "/img/icons/icon-192.png",
       "sizes": "192x192",
-      "type": "image/jpeg"
+      "type": "image/png"
     },
     {
-      "src": "/img/logo.jpeg",
+      "src": "/img/icons/icon-512.png",
       "sizes": "512x512",
-      "type": "image/jpeg"
+      "type": "image/png"
+    },
+    {
+      "src": "/img/icons/icon-512-maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
